# totally_not_tiny_cards

./: CMakeLists.txt  Card.cpp  Card.h  Deck.cpp  Deck.h  README.md  Untitled.fbp  addDeck.cpp  addLogic.cpp  addLogic.h  allFrames.cpp  backendLogic.cpp  backendLogic.h  chooseDeck.cpp  dataBase.cpp  dataBase.h  dataBase_old.cpp  dataBase_old.h  edit.cpp  editLogic.cpp  editLogic.h  lesson.cpp  lessonLogic.cpp  lessonLogic.h  main.cpp  main.h  parser.cpp  parser.h  start.cpp
